Pascal_To_C_Antlr_Semantic.v2/MathExprParser.cs
// $ANTLR 3.2 Sep 23, 2009 12:02:23 MathExpr.g 2015-10-06 15:46:43

// The variable 'variable' is assigned but its value is never used.
#pragma warning disable 168, 219
// Unreachable code detected.
#pragma warning disable 162


using System;
using Antlr.Runtime;
using IList 		= System.Collections.IList;
using ArrayList 	= System.Collections.ArrayList;
using Stack 		= Antlr.Runtime.Collections.StackList;

using IDictionary	= System.Collections.IDictionary;
using Hashtable 	= System.Collections.Hashtable;

using Antlr.Runtime.Tree;

namespace  MathExpr 
{
public partial class MathExprParser : Parser
{
    public static readonly string[] tokenNames = new string[] 
	{
        "<invalid>", 
		"<EOR>", 
		"<DOWN>", 
		"<UP>", 
		"UNKNOWN", 
		"BLOCK", 
		"PARAMS", 
		"CALL", 
		"CONVERT", 
		"IF", 
		"ELSE", 
		"FOR", 
		"WHILE", 
		"REPEAT", 
		"UNTIL", 
		"BEGIN", 
		"END", 
		"AND", 
		"OR", 
		"NOT", 
		"XOR", 
		"INT_DIV", 
		"INT_MOD", 
		"SHR", 
		"SHL", 
		"IN", 
		"VAR", 
		"RETURN", 
		"PROCEDURE", 
		"FUNCTION", 
		"PROGRAM", 
		"TRUE", 
		"FALSE", 
		"WS", 
		"ML_COMMENT", 
		"NUMBER", 
		"IDENT", 
		"ADD", 
		"SUB", 
		"MUL", 
		"DIV", 
		"BIT_AND", 
		"BIT_OR", 
		"ASSIGN", 
		"GE", 
		"LE", 
		"NEQUALS", 
		"EQUALS", 
		"GT", 
		"LT", 
		"','", 
		"'('", 
		"')'", 
		"'{'", 
		"'}'", 
		"';'"
    };

    public const int SHR = 23;
    public const int FUNCTION = 29;
    public const int LT = 49;
    public const int BIT_AND = 41;
    public const int WHILE = 12;
    public const int SHL = 24;
    public const int FOR = 11;
    public const int SUB = 38;
    public const int EQUALS = 47;
    public const int NOT = 19;
    public const int AND = 17;
    public const int EOF = -1;
    public const int NEQUALS = 46;
    public const int IF = 9;
    public const int T__55 = 55;
    public const int ML_COMMENT = 34;
    public const int T__51 = 51;
    public const int T__52 = 52;
    public const int IN = 25;
    public const int T__53 = 53;
    public const int BIT_OR = 42;
    public const int UNKNOWN = 4;
    public const int T__54 = 54;
    public const int BEGIN = 15;
    public const int INT_DIV = 21;
    public const int RETURN = 27;
    public const int IDENT = 36;
    public const int VAR = 26;
    public const int T__50 = 50;
    public const int ADD = 37;
    public const int PARAMS = 6;
    public const int INT_MOD = 22;
    public const int GE = 44;
    public const int XOR = 20;
    public const int CONVERT = 8;
    public const int ELSE = 10;
    public const int NUMBER = 35;
    public const int MUL = 39;
    public const int TRUE = 31;
    public const int PROCEDURE = 28;
    public const int WS = 33;
    public const int UNTIL = 14;
    public const int BLOCK = 5;
    public const int OR = 18;
    public const int ASSIGN = 43;
    public const int GT = 48;
    public const int PROGRAM = 30;
    public const int REPEAT = 13;
    public const int CALL = 7;
    public const int DIV = 40;
    public const int END = 16;
    public const int FALSE = 32;
    public const int LE = 45;

    // delegates
    // delegators



        public MathExprParser(ITokenStream input)
    		: this(input, new RecognizerSharedState()) {
        }

        public MathExprParser(ITokenStream input, RecognizerSharedState state)
    		: base(input, state) {
            InitializeCyclicDFAs();
            this.state.ruleMemo = new Hashtable[75+1];
             
             
        }
        
    protected ITreeAdaptor adaptor = new CommonTreeAdaptor();

    public ITreeAdaptor TreeAdaptor
    {
        get { return this.adaptor; }
        set {
    	this.adaptor = value;
    	}
    }

    override public string[] TokenNames {
		get { return MathExprParser.tokenNames; }
    }

    override public string GrammarFileName {
		get { return "MathExpr.g"; }
    }


    public class ident_return : ParserRuleReturnScope
    {
        private AstNode tree;
        override public object Tree
        {
        	get { return tree; }
        	set { tree = (AstNode) value; }
        }
    };

    // $ANTLR start "ident"
    // MathExpr.g:84:1: ident : IDENT ;
    public MathExprParser.ident_return ident() // throws RecognitionException [1]
    {   
        MathExprParser.ident_return retval = new MathExprParser.ident_return();
        retval.Start = input.LT(1);
        int ident_StartIndex = input.Index();
        AstNode root_0 = null;

        IToken IDENT1 = null;

        AstNode IDENT1_tree=null;

        try 
    	{
    	    if ( (state.backtracking > 0) && AlreadyParsedRule(input, 1) ) 
    	    {
    	    	return retval; 
    	    }
            // MathExpr.g:84:6: ( IDENT )
            // MathExpr.g:84:8: IDENT
            {
            	root_0 = (AstNode)adaptor.GetNilNode();

            	IDENT1=(IToken)Match(input,IDENT,FOLLOW_IDENT_in_ident876); if (state.failed) return retval;
            	if ( state.backtracking == 0 )
            	{IDENT1_tree = (AstNode)adaptor.Create(IDENT1);
            		adaptor.AddChild(root_0, IDENT1_tree);
            	}

            }

            retval.Stop = input.LT(-1);

            if ( (state.backtracking==0) )
            {	retval.Tree = (AstNode)adaptor.RulePostProcessing(root_0);
            	adaptor.SetTokenBoundaries(retval.Tree, (IToken) retval.Start, (IToken) retval.Stop);}
        }
        catch (RecognitionException re) 
    	{
            ReportError(re);
            Recover(input,re);
    	// Conversion of the second argument necessary, but harmless
    	retval.Tree = (AstNode)adaptor.ErrorNode(input, (IToken) retval.Start, input.LT(-1), re);

        }
        finally 
    	{
            if ( state.backtracking > 0 ) 
            {
            	Memoize(input, 1, ident_StartIndex); 
            }
        }
        return retval;
    }
    // $ANTLR end "ident"

    public class params__return : ParserRuleReturnScope
    {
        private AstNode tree;
        override public object Tree
        {
        	get { return tree; }
        	set { tree = (AstNode) value; }
        }
    };

    // $ANTLR start "params_"
    // MathExpr.g:87:1: params_ : ( term ( ',' term )* )? ;
    public MathExprParser.params__return params_() // throws RecognitionException [1]
    {   
        MathExprParser.params__return retval = new MathExprParser.params__return();
        retval.Start = input.LT(1);
        int params__StartIndex = input.Index();
        AstNode root_0 = null;

        IToken char_literal3 = null;
        MathExprParser.term_return term2 = default(MathExprParser.term_return);

        MathExprParser.term_return term4 = default(MathExprParser.term_return);


        AstNode char_literal3_tree=null;

        try 
    	{
    	    if ( (state.backtracking > 0) && AlreadyParsedRule(input, 2) ) 
    	    {
    	    	return retval; 
    	    }
            // MathExpr.g:87:8: ( ( term ( ',' term )* )? )
            // MathExpr.g:87:10: ( term ( ',' term )* )?
            {
            	root_0 = (AstNode)adaptor.GetNilNode();

            	// MathExpr.g:87:10: ( term ( ',' term )* )?
            	int alt2 = 2;
            	int LA2_0 = input.LA(1);

            	if ( (LA2_0 == NOT || (LA2_0 >= TRUE && LA2_0 <= FALSE) || (LA2_0 >= NUMBER && LA2_0 <= IDENT) || LA2_0 == 51) )
            	{
            	    alt2 = 1;
            	}
            	switch (alt2) 
            	{
            	    case 1 :
            	        // MathExpr.g:87:12: term ( ',' term )*
            	        {
            	        	PushFollow(FOLLOW_term_in_params_887);
            	        	term2 = term();
            	        	state.followingStackPointer--;
            	        	if (state.failed) return retval;
            	        	if ( state.backtracking == 0 ) adaptor.AddChild(root_0, term2.Tree);
            	        	// MathExpr.g:87:17: ( ',' term )*
            	        	do 
            	        	{
            	        	    int alt1 = 2;
            	        	    int LA1_0 = input.LA(1);

            	        	    if ( (LA1_0 == 50) )
            	        	    {
            	        	        alt1 = 1;
            	        	    }


            	        	    switch (alt1) 
            	        		{
            	        			case 1 :
            	        			    // MathExpr.g:87:18: ',' term
            	        			    {
            	        			    	char_literal3=(IToken)Match(input,50,FOLLOW_50_in_params_890); if (state.failed) return retval;
            	        			    	PushFollow(FOLLOW_term_in_params_893);
            	        			    	term4 = term();
            	        			    	state.followingStackPointer--;
            	        			    	if (state.failed) return retval;
            	        			    	if ( state.backtracking == 0 ) adaptor.AddChild(root_0, term4.Tree);

            	        			    }
            	        			    break;

            	        			default:
            	        			    goto loop1;
            	        	    }
            	        	} while (true);

            	        	loop1:
            	        		;	// Stops C# compiler whining that label 'loop1' has no statements


            	        }
            	        break;

            	}


            }

            retval.Stop = input.LT(-1);

            if ( (state.backtracking==0) )
            {	retval.Tree = (AstNode)adaptor.RulePostProcessing(root_0);
            	adaptor.SetTokenBoundaries(retval.Tree, (IToken) retval.Start, (IToken) retval.Stop);}
        }
        catch (RecognitionException re) 
    	{
            ReportError(re);
            Recover(input,re);
    	// Conversion of the second argument necessary, but harmless
    	retval.Tree = (AstNode)adaptor.ErrorNode(input, (IToken) retval.Start, input.LT(-1), re);

        }
        finally 
    	{
            if ( state.backtracking > 0 ) 
            {
            	Memoize(input, 2, params__StartIndex); 
            }
        }
        return retval;
    }
    // $ANTLR end "params_"

    public class call_return : ParserRuleReturnScope
    {
        private AstNode tree;
        override public object Tree
        {
        	get { return tree; }
        	set { tree = (AstNode) value; }
        }
    };

    // $ANTLR start "call"
    // MathExpr.g:88:1: call : ident '(' params_ ')' -> ^( CALL ident ^( PARAMS ( params_ )? ) ) ;
    public MathExprParser.call_return call() // throws RecognitionException [1]
    {   
        MathExprParser.call_return retval = new MathExprParser.call_return();
        retval.Start = input.LT(1);
        int call_StartIndex = input.Index();
        AstNode root_0 = null;

        IToken char_literal6 = null;
        IToken char_literal8 = null;
        MathExprParser.ident_return ident5 = default(MathExprParser.ident_return);

        MathExprParser.params__return params_7 = default(MathExprParser.params__return);


        AstNode char_literal6_tree=null;
        AstNode char_literal8_tree=null;
        RewriteRuleTokenStream stream_51 = new RewriteRuleTokenStream(adaptor,"token 51");
        RewriteRuleTokenStream stream_52 = new RewriteRuleTokenStream(adaptor,"token 52");
        RewriteRuleSubtreeStream stream_ident = new RewriteRuleSubtreeStream(adaptor,"rule ident");
        RewriteRuleSubtreeStream stream_params_ = new RewriteRuleSubtreeStream(adaptor,"rule params_");
        try 
    	{
    	    if ( (state.backtracking > 0) && AlreadyParsedRule(input, 3) ) 
    	    {
    	    	return retval; 
    	    }
            // MathExpr.g:88:5: ( ident '(' params_ ')' -> ^( CALL ident ^( PARAMS ( params_ )? ) ) )
            // MathExpr.g:88:7: ident '(' params_ ')'
            {
            	PushFollow(FOLLOW_ident_in_call906);
            	ident5 = ident();
            	state.followingStackPointer--;
            	if (state.failed) return retval;
            	if ( (state.backtracking==0) ) stream_ident.Add(ident5.Tree);
            	char_literal6=(IToken)Match(input,51,FOLLOW_51_in_call908); if (state.failed) return retval; 
            	if ( (state.backtracking==0) ) stream_51.Add(char_literal6);

            	PushFollow(FOLLOW_params__in_call910);
            	params_7 = params_();
            	state.followingStackPointer--;
            	if (state.failed) return retval;
            	if ( (state.backtracking==0) ) stream_params_.Add(params_7.Tree);
            	char_literal8=(IToken)Match(input,52,FOLLOW_52_in_call912); if (state.failed) return retval; 
            	if ( (state.backtracking==0) ) stream_52.Add(char_literal8);



            	// AST REWRITE
            	// elements:          params_, ident
            	// token labels:      
            	// rule labels:       retval
            	// token list labels: 
            	// rule list labels:  
            	// wildcard labels: 
            	if ( (state.backtracking==0) ) {
            	retval.Tree = root_0;
            	RewriteRuleSubtreeStream stream_retval = new RewriteRuleSubtreeStream(adaptor, "rule retval", retval!=null ? retval.Tree : null);

            	root_0 = (AstNode)adaptor.GetNilNode();
            	// 88:30: -> ^( CALL ident ^( PARAMS ( params_ )? ) )
            	{
            	    // MathExpr.g:88:33: ^( CALL ident ^( PARAMS ( params_ )? ) )
            	    {
            	    AstNode root_1 = (AstNode)adaptor.GetNilNode();
            	    root_1 = (AstNode)adaptor.BecomeRoot((AstNode)adaptor.Create(CALL, "CALL"), root_1);

            	    adaptor.AddChild(root_1, stream_ident.NextTree());
            	    // MathExpr.g:88:46: ^( PARAMS ( params_ )? )
            	    {
            	    AstNode root_2 = (AstNode)adaptor.GetNilNode();
            	    root_2 = (AstNode)adaptor.BecomeRoot((AstNode)adaptor.Create(PARAMS, "PARAMS"), root_2);

            	    // MathExpr.g:88:55: ( params_ )?
            	    if ( stream_params_.HasNext() )
            	    {
            	        adaptor.AddChild(root_2, stream_params_.NextTree());

            	    }
            	    stream_params_.Reset();

            	    adaptor.AddChild(root_1, root_2);
            	    }

            	    adaptor.AddChild(root_0, root_1);
            	    }

            	}

            	retval.Tree = root_0;retval.Tree = root_0;}
            }

            retval.Stop = input.LT(-1);

            if ( (state.backtracking==0) )
            {	retval.Tree = (AstNode)adaptor.RulePostProcessing(root_0);
            	adaptor.SetTokenBoundaries(retval.Tree, (IToken) retval.Start, (IToken) retval.Stop);}
        }
        catch (RecognitionException re) 
    	{
            ReportError(re);
            Recover(input,re);
    	// Conversion of the second argument necessary, but harmless
    	retval.Tree = (AstNode)adaptor.ErrorNode(input, (IToken) retval.Start, input.LT(-1), re);

        }
        finally 
    	{
            if ( state.backtracking > 0 ) 
            {
            	Memoize(input, 3, call_StartIndex); 
            }
        }
        return retval;
    }
    // $ANTLR end "call"

    public class group_return : ParserRuleReturnScope
    {
        private AstNode tree;
        override public object Tree
        {
        	get { return tree; }
        	set { tree = (AstNode) value; }
        }
    };

    // $ANTLR start "group"
    // MathExpr.g:90:1: group : ( '(' term ')' | NUMBER | TRUE | FALSE | ident | call );
    public MathExprParser.group_return group() // throws RecognitionException [1]
    {   
        MathExprParser.group_return retval = new MathExprParser.group_return();
        retval.Start = input.LT(1);
        int group_StartIndex = input.Index();
        AstNode root_0 = null;

        IToken char_literal9 = null;
        IToken char_literal11 = null;
        IToken NUMBER12 = null;
        IToken TRUE13 = null;
        IToken FALSE14 = null;
        MathExprParser.term_return term10 = default(MathExprParser.term_return);

        MathExprParser.ident_return ident15 = default(MathExprParser.ident_return);

        MathExprParser.call_return call16 = default(MathExprParser.call_return);


        AstNode char_literal9_tree=null;
        AstNode char_literal11_tree=null;
        AstNode NUMBER12_tree=null;
        AstNode TRUE13_tree=null;
        AstNode FALSE14_tree=null;

        try 
    	{
    	    if ( (state.backtracking > 0) && AlreadyParsedRule(input, 4) ) 
    	    {
    	    	return retval; 
    	    }
            // MathExpr.g:90:6: ( '(' term ')' | NUMBER | TRUE | FALSE | ident | call )
            int alt3 = 6;
            switch ( input.LA(1) ) 
            {
            case 51:
            	{
                alt3 = 1;
                }
                break;
            case NUMBER:
            	{
                alt3 = 2;
                }
                break;
            case TRUE:
            	{
                alt3 = 3;
                }
                break;
            case FALSE:
            	{
                alt3 = 4;
                }
                break;
            case IDENT:
            	{
                int LA3_5 = input.LA(2);

                if ( (LA3_5 == EOF || (LA3_5 >= IF && LA3_5 <= UNTIL) || (LA3_5 >= AND && LA3_5 <= OR) || (LA3_5 >= INT_DIV && LA3_5 <= INT_MOD) || LA3_5 == RETURN || (LA3_5 >= IDENT && LA3_5 <= BIT_OR) || (LA3_5 >= GE && LA3_5 <= 50) || (LA3_5 >= 52 && LA3_5 <= 55)) )
                {
                    alt3 = 5;
                }
                else if ( (LA3_5 == 51) )
                {
                    alt3 = 6;
                }
                else 
                {
                    if ( state.backtracking > 0 ) {state.failed = true; return retval;}
                    NoViableAltException nvae_d3s5 =
                        new NoViableAltException("", 3, 5, input);

                    throw nvae_d3s5;
                }
                }
                break;
            	default:
            	    if ( state.backtracking > 0 ) {state.failed = true; return retval;}
            	    NoViableAltException nvae_d3s0 =
            	        new NoViableAltException("", 3, 0, input);

            	    throw nvae_d3s0;
            }

            switch (alt3) 
            {
                case 1 :
                    // MathExpr.g:91:3: '(' term ')'
                    {
                    	root_0 = (AstNode)adaptor.GetNilNode();

                    	char_literal9=(IToken)Match(input,51,FOLLOW_51_in_group938); if (state.failed) return retval;
                    	PushFollow(FOLLOW_term_in_group941);
                    	term10 = term();
                    	state.followingStackPointer--;
                    	if (state.failed) return retval;
                    	if ( state.backtracking == 0 ) adaptor.AddChild(root_0, term10.Tree);
                    	char_literal11=(IToken)Match(input,52,FOLLOW_52_in_group943); if (state.failed) return retval;

                    }
                    break;
                case 2 :
                    // MathExpr.g:92:3: NUMBER
                    {
                    	root_0 = (AstNode)adaptor.GetNilNode();

                    	NUMBER12=(IToken)Match(input,NUMBER,FOLLOW_NUMBER_in_group948); if (state.failed) return retval;
                    	if ( state.backtracking == 0 )
                    	{NUMBER12_tree = (AstNode)adaptor.Create(NUMBER12);
                    		adaptor.AddChild(root_0, NUMBER12_tree);
                    	}

                    }
                    break;
                case 3 :
                    // MathExpr.g:93:3: TRUE
                    {
                    	root_0 = (AstNode)adaptor.GetNilNode();

                    	TRUE13=(IToken)Match(input,TRUE,FOLLOW_TRUE_in_group952); if (state.failed) return retval;
                    	if ( state.backtracking == 0 )
                    	{TRUE13_tree = (AstNode)adaptor.Create(TRUE13);
                    		adaptor.AddChild(root_0, TRUE13_tree);
                    	}

                    }
                    break;
                case 4 :
                    // MathExpr.g:94:3: FALSE
                    {
                    	root_0 = (AstNode)adaptor.GetNilNode();

                    	FALSE14=(IToken)Match(input,FALSE,FOLLOW_FALSE_in_group956); if (state.failed) return retval;
                    	if ( state.backtracking == 0 )
                    	{FALSE14_tree = (AstNode)adaptor.Create(FALSE14);
                    		adaptor.AddChild(root_0, FALSE14_tree);
                    	}

                    }
                    break;
                case 5 :
                    // MathExpr.g:95:3: ident
                    {
                    	root_0 = (AstNode)adaptor.GetNilNode();

                    	PushFollow(FOLLOW_ident_in_group960);
                    	ident15 = ident();
                    	state.followingStackPointer--;
                    	if (state.failed) return retval;
                    	if ( state.backtracking == 0 ) adaptor.AddChild(root_0, ident15.Tree);

                    }
                    break;
                case 6 :
                    // MathExpr.g:96:3: call
                    {
                    	root_0 = (AstNode)adaptor.GetNilNode();

                    	PushFollow(FOLLOW_call_in_group964);
                    	call16 = call();
                    	state.followingStackPointer--;
                    	if (state.failed) return retval;
                    	if ( state.backtracking == 0 ) adaptor.AddChild(root_0, call16.Tree);

                    }
                    break;

            }
            retval.Stop = input.LT(-1);

            if ( (state.backtracking==0) )
            {	retval.Tree = (AstNode)adaptor.RulePostProcessing(root_0);
            	adaptor.SetTokenBoundaries(retval.Tree, (IToken) retval.Start, (IToken) retval.Stop);}
        }
        catch (RecognitionException re) 
    	{
            ReportError(re);
            Recover(input,re);
    	// Conversion of the second argument necessary, but harmless
    	retval.Tree = (AstNode)adaptor.ErrorNode(input, (IToken) retval.Start, input.LT(-1), re);

        }
        finally 
    	{
            if ( state.backtracking > 0 ) 
            {
            	Memoize(input, 4, group_StartIndex); 
            }
        }
        return retval;
    }
    // $ANTLR end "group"

    public class not_return : ParserRuleReturnScope
    {
        private AstNode tree;
        override public object Tree
        {
        	get { return tree; }
        	set { tree = (AstNode) value; }
        }
    };

    // $ANTLR start "not"
    // MathExpr.g:100:1: not : ( group | NOT not );
    public MathExprParser.not_return not() // throws RecognitionException [1]
    {   
        MathExprParser.not_return retval = new MathExprParser.not_return();
        retval.Start = input.LT(1);
        int not_StartIndex = input.Index();
        AstNode root_0 = null;

        IToken NOT18 = null;
        MathExprParser.group_return group17 = default(MathExprParser.group_return);

        MathExprParser.not_return not19 = default(MathExprParser.not_return);


        AstNode NOT18_tree=null;

        try 
    	{
    	    if ( (state.backtracking > 0) && AlreadyParsedRule(input, 5) ) 
    	    {
    	    	return retval; 
    	    }
            // MathExpr.g:100:4: ( group | NOT not )
            int alt4 = 2;
            int LA4_0 = input.LA(1);

            if ( ((LA4_0 >= TRUE && LA4_0 <= FALSE) || (LA4_0 >= NUMBER && LA4_0 <= IDENT) || LA4_0 == 51) )
            {
                alt4 = 1;
            }
            else if ( (LA4_0 == NOT) )
            {
                alt4 = 2;
            }
            else 
            {
                if ( state.backtracking > 0 ) {state.failed = true; return retval;}
                NoViableAltException nvae_d4s0 =
                    new NoViableAltException("", 4, 0, input);

                throw nvae_d4s0;
            }
            switch (alt4) 
            {
                case 1 :
                    // MathExpr.g:100:8: group
                    {
                    	root_0 = (AstNode)adaptor.GetNilNode();

                    	PushFollow(FOLLOW_group_in_not975);
                    	group17 = group();
                    	state.followingStackPointer--;
                    	if (state.failed) return retval;
                    	if ( state.backtracking == 0 ) adaptor.AddChild(root_0, group17.Tree);

                    }
                    break;
                case 2 :
                    // MathExpr.g:100:16: NOT not
                    {
                    	root_0 = (AstNode)adaptor.GetNilNode();

                    	NOT18=(IToken)Match(input,NOT,FOLLOW_NOT_in_not979); if (state.failed) return retval;
                    	if ( state.backtracking == 0 )
                    	{NOT18_tree = (AstNode)adaptor.Create(NOT18);
                    		root_0 = (AstNode)adaptor.BecomeRoot(NOT18_tree, root_0);
                    	}
                    	PushFollow(FOLLOW_not_in_not982);
                    	not19 = not();
                    	state.followingStackPointer--;
                    	if (state.failed) return retval;
                    	if ( state.backtracking == 0 ) adaptor.AddChild(root_0, not19.Tree);

                    }
                    break;

            }
            retval.Stop = input.LT(-1);

            if ( (state.backtracking==0) )
            {	retval.Tree = (AstNode)adaptor.RulePostProcessing(root_0);
            	adaptor.SetTokenBoundaries(retval.Tree, (IToken) retval.Start, (IToken) retval.Stop);}
        }
        catch (RecognitionException re) 
    	{
            ReportError(re);
            Recover(input,re);
    	// Conversion of the second argument necessary, but harmless
    	retval.Tree = (AstNode)adaptor.ErrorNode(input, (IToken) retval.Start, input.LT(-1), re);

        }
        finally 
    	{
            if ( state.backtracking > 0 ) 
            {
            	Memoize(input, 5, not_StartIndex); 
            }
        }
        return retval;
    }
    // $ANTLR end "not"

    public class mult_return : ParserRuleReturnScope
    {
        private AstNode tree;
        override public object Tree
        {
        	get { return tree; }
        	set { tree = (AstNode) value; }
        }
    };

    // $ANTLR start "mult"
    // MathExpr.g:101:1: mult : not ( ( MUL | DIV | BIT_AND | INT_DIV | INT_MOD ) not )* ;
    public MathExprParser.mult_return mult() // throws RecognitionException [1]
    {   
        MathExprParser.mult_return retval = new MathExprParser.mult_return();
        retval.Start = input.LT(1);
        int mult_StartIndex = input.Index();
        AstNode root_0 = null;

        IToken set21 = null;
        MathExprParser.not_return not20 = default(MathExprParser.not_return);

        MathExprParser.not_return not22 = default(MathExprParser.not_return);


        AstNode set21_tree=null;

        try 
    	{
    	    if ( (state.backtracking > 0) && AlreadyParsedRule(input, 6) ) 
    	    {
    	    	return retval; 
    	    }
            // MathExpr.g:101:5: ( not ( ( MUL | DIV | BIT_AND | INT_DIV | INT_MOD ) not )* )
            // MathExpr.g:101:8: not ( ( MUL | DIV | BIT_AND | INT_DIV | INT_MOD ) not )*
            {
            	root_0 = (AstNode)adaptor.GetNilNode();

            	PushFollow(FOLLOW_not_in_mult990);
            	not20 = not();
            	state.followingStackPointer--;
            	if (state.failed) return retval;
            	if ( state.backtracking == 0 ) adaptor.AddChild(root_0, not20.Tree);
            	// MathExpr.g:101:12: ( ( MUL | DIV | BIT_AND | INT_DIV | INT_MOD ) not )*
            	do 
            	{
            	    int alt5 = 2;
            	    int LA5_0 = input.LA(1);

            	    if ( ((LA5_0 >= INT_DIV && LA5_0 <= INT_MOD) || (LA5_0 >= MUL && LA5_0 <= BIT_AND)) )
            	    {
            	        alt5 = 1;
            	    }


            	    switch (alt5) 
            		{
            			case 1 :
            			    // MathExpr.g:101:14: ( MUL | DIV | BIT_AND | INT_DIV | INT_MOD ) not
            			    {
            			    	set21=(IToken)input.LT(1);
            			    	set21 = (IToken)input.LT(1);
            			    	if ( (input.LA(1) >= INT_DIV && input.LA(1) <= INT_MOD) || (input.LA(1) >= MUL && input.LA(1) <= BIT_AND) ) 
            			    	{
            			    	    input.Consume();
            			    	    if ( state.backtracking == 0 ) root_0 = (AstNode)adaptor.BecomeRoot((AstNode)adaptor.Create(set21), root_0);
            			    	    state.errorRecovery = false;state.failed = false;
            			    	}
            			    	else 
            			    	{
            			    	    if ( state.backtracking > 0 ) {state.failed = true; return retval;}
            			    	    MismatchedSetException mse = new MismatchedSetException(null,input);
            			    	    throw mse;
            			    	}

            			    	PushFollow(FOLLOW_not_in_mult1017);
            			    	not22 = not();
            			    	state.followingStackPointer--;
            			    	if (state.failed) return retval;
            			    	if ( state.backtracking == 0 ) adaptor.AddChild(root_0, not22.Tree);

            			    }
            			    break;

            			default:
            			    goto loop5;
            	    }
            	} while (true);

            	loop5:
            		;	// Stops C# compiler whining that label 'loop5' has no statements


            }

            retval.Stop = input.LT(-1);

            if ( (state.backtracking==0) )
            {	retval.Tree = (AstNode)adaptor.RulePostProcessing(root_0);
            	adaptor.SetTokenBoundaries(retval.Tree, (IToken) retval.Start, (IToken) retval.Stop);}
        }
        catch (RecognitionException re) 
    	{
            ReportError(re);
            Recover(input,re);
    	// Conversion of the second argument necessary, but harmless
    	retval.Tree = (AstNode)adaptor.ErrorNode(input, (IToken) retval.Start, input.LT(-1), re);

        }
        finally 
    	{
            if ( state.backtracking > 0 ) 
            {
            	Memoize(input, 6, mult_StartIndex); 
            }
        }
        return retval;
    }
    // $ANTLR end "mult"

    public class add_return : ParserRuleReturnScope
    {
        private AstNode tree;
        override public object Tree
        {
        	get { return tree; }
        	set { tree = (AstNode) value; }
        }
    };

    // $ANTLR start "add"
    // MathExpr.g:102:1: add : mult ( ( ADD | SUB | BIT_OR ) mult )* ;
    public MathExprParser.add_return add() // throws RecognitionException [1]
    {   
        MathExprParser.add_return retval = new MathExprParser.add_return();
        retval.Start = input.LT(1);
        int add_StartIndex = input.Index();
        AstNode root_0 = null;

        IToken set24 = null;
        MathExprParser.mult_return mult23 = default(MathExprParser.mult_return);

        MathExprParser.mult_return mult25 = default(MathExprParser.mult_return);


        AstNode set24_tree=null;

        try 
    	{
    	    if ( (state.backtracking > 0) && AlreadyParsedRule(input, 7) ) 
    	    {
    	    	return retval; 
    	    }
            // MathExpr.g:102:4: ( mult ( ( ADD | SUB | BIT_OR ) mult )* )
            // MathExpr.g:102:8: mult ( ( ADD | SUB | BIT_OR ) mult )*
            {
            	root_0 = (AstNode)adaptor.GetNilNode();

            	PushFollow(FOLLOW_mult_in_add1030);
            	mult23 = mult();
            	state.followingStackPointer--;
            	if (state.failed) return retval;
            	if ( state.backtracking == 0 ) adaptor.AddChild(root_0, mult23.Tree);
            	// MathExpr.g:102:14: ( ( ADD | SUB | BIT_OR ) mult )*
            	do 
            	{
            	    int alt6 = 2;
            	    int LA6_0 = input.LA(1);
